--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@3rdweb/hooks": "^1.9.2",
+    "@3rdweb/sdk": "^1.41.1",
+    "@sanity/client": "^3.1.0",
+    "next": "12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
+    "@types/node": "17.0.19",
+    "@types/react": "17.0.39",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "tailwindcss": "^3.0.23",
+    "typescript": "4.5.5"
   }
 }
